<resources>
    <string name="app_name">Story App</string>
    <string name="registrasi_akun">Registration Account</string>
    <string name="intro_login">Are you ready to explore? Login To Get Started</string>
    <string name="app_icon">App Icon</string>
    <string name="something_wrong">Something wrong…</string>
    <string name="capture_image">Capture Image</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="image_detail">Image Detail</string>
    <string name="image_detail_back">Image Detail Back</string>
    <string name="icon_realease_date">Icon Release Date</string>
    <string name="image_register">Image Register</string>
    <string name="image_layout_story">Image Layout Story</string>
    <string name="image_placeholder_photo">Image Placeholder Photo</string>
    <string name="image_add_story">Image Add Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload_story">Upload Story</string>
    <string name="nama">Name</string>
    <string name="created_at">Created At</string>
    <string name="tanggal">Date</string>
    <string name="halo">Halo,</string>
    <string name="name">Name</string>
    <string name="create_at">Create At</string>
    <string name="registrasi_baru">New User Registration</string>
    <string name="hint_nama">Enter your Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">Enter Password</string>
    <string name="login_akun">Login Account</string>
    <string name="preview_image">preview image</string>
    <string name="logout">Logout</string>
    <string name="image_back">Image Back</string>
    <string name="line">Line</string>
    <string name="data_valid">Please Fill Valid Data</string>
    <string name="success_register">Registration Success</string>
    <string name="login_valid">Failed to Login Fill Data Valid</string>
    <string name="success_login">Login Success</string>
    <string name="failed_take_picture">Failed to take picture.</string>
    <string name="failed_show_picture">Failed to bring up the camera.</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="no_permission">Did not get permissions.</string>
    <string name="success_upload_story">Upload Story Success</string>
    <string name="failed_upload_story">Failed Uploading Story, Please Fill out data valid</string>
    <string name="setting">Setting Language</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Retry</string>
    <string name="latitude">Latitude(optional)</string>
    <string name="longtitude">Longtitude(optional)</string>
    <string name="ambil_dari_map">Get From Map</string>
    <string name="pin">Pin Map</string>
    <string name="confirm">Confirm</string>
</resources>