<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image_photo"
            android:layout_width="match_parent"
            android:contentDescription="@string/image_layout_story"
            android:layout_height="200dp"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/name"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/image_photo"/>

        <TextView
            android:id="@+id/text_createdAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/create_at"
            android:textColor="@android:color/darker_gray"
            android:layout_below="@+id/text_name"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>