<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ivMaps"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@+id/ivLanguage"
        android:contentDescription="@string/setting"
        android:src="@drawable/baseline_map_24" />

    <ImageView
        android:id="@+id/ivLanguage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerInParent="true"
        android:layout_marginEnd="16dp"
        android:layout_toStartOf="@+id/ivLogout"
        android:contentDescription="@string/setting"
        android:src="@drawable/ic_language" />

    <ImageView
        android:id="@+id/ivLogout"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/logout"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:src="@drawable/logout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/halo"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>